# Pose-Estimation-Library

./: .cs_workspaces  .gitignore  CMakeLists.txt  LICENSE.txt  LICENSE_DERIVATE.txt  PELConfig.cmake.in  PELConfigVersion.cmake.in  PlotFeatures.plot  README.md  create_db.cpp  elab_test.cpp  interface.h  interface.hpp  package.xml  pose_estimator.cpp  prova.doxy  version.cmake.in
Doxygen/: prova.doxy
Doxygen/html/: PoseEstimation__interface_8h.html  PoseEstimation__interface_8h_source.html  PoseEstimation__interface_8hpp.html  PoseEstimation__interface_8hpp_source.html  annotated.html  classCandidate-members.html  classCandidate.html  classPoseDB-members.html  classPoseDB.html  classPoseEstimation-members.html  classPoseEstimation.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  formula.repository  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  group__Definitions.html  group__global.html  index.html  modules.html
Doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  groups_0.js  groups_1.js  pages_0.js  related_0.js  search.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js  variables_6.js  (+3 more)
Doxygen/latex/: PoseEstimation__interface_8h.tex  PoseEstimation__interface_8hpp.tex  annotated.tex  classCandidate.tex  classPoseDB.tex  classPoseEstimation.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  group__Definitions.tex  group__global.tex  index.tex  modules.tex  refman.tex
Example Apps/: CMakeLists.txt
ExampleApps/: database_builder.cpp  estimator_on_demand.cpp  prova2.cpp
Tests/: CMakeLists.txt  prova.cpp
cmake/: PELConfig.cmake.in  PELConfigVersion.cmake.in  PelConfig.cmake.in  config_h.cmake.in  pelConfig.cmake.in  pelConfigVersion.cmake.in  pkgconfig.cmake.in  uninstall.cmake.in
config/: parameters.conf  parameters.yaml
implementation/: PoseEstimation_interface.cpp
include/: PoseEstimation_interface.h  PoseEstimation_interface.hpp  interface.h  interface.hpp  version.h
include/pel/: candidate.h  common.h  database.h  param_handler.h  pe_brute_force.h  pe_progressive_bisection.h  pose_estimation.h  pose_estimation_base.h
include/pel/candidates/: candidate.h  candidate_list.h  target.h
include/pel/database/: database.h  database_creator.h  database_io.h
include/pel/storage/: candidate.h  database.h
latex/: PoseEstimation__interface_8h.tex  PoseEstimation__interface_8hpp.tex  Typedefs.tex  annotated.tex  classCandidate.tex  classPoseDB.tex  classPoseEstimation.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  group__Definitions.tex  group__Typedefs.tex  group__global.tex  modules.tex  refman.tex
old_code/: old_code.back
pel/: CMakeLists.txt  PoseEstimation_interface.cpp  pel.h  version.h
src/: common.cpp  database.cpp  param_handler.cpp  pe_brute_force.cpp  pe_progressive_bisection.cpp  pose_estimation.cpp  pose_estimation_base.cpp
src/candidates/: candidate_list.cpp
src/database/: database.cpp  database_creator.cpp  database_io.cpp
src/storage/: database.cpp
